<resources>
    <string name="app_name">Karlos Restaurant</string>
    <string name="hint_sign_in">SIGN IN</string>

    <string name="FACEBOOK_APP_ID">399280294017306</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">454017756fc0cacdaf25474d0d9f2c40</string>
    <string name="title_activity_home">My Restaurant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_user_information">User Information</string>
    <string name="hint_user_name">Name</string>
    <string name="hint_user_address">Address</string>
    <string name="hint_update">UPDATE</string>
    <string name="update_information">Update Information</string>
    <string name="hint_log_out">Sign Out</string>
    <string name="hint_nearby_restaurant">Nearby Restaurant</string>
    <string name="hint_order_history">Order History</string>
    <string name="hint_update_info">Update Information</string>
    <string name="dummy_restaurant_name">Restaurant Dummy</string>
    <string name="dummy_restaurant_address">257 Carianna Cove Trl World</string>
    <string name="hint_menu_subtitle">By Your Mood Or Preference</string>
    <string name="dummy_category_name">CHINESSE BEGETARIAN</string>
    <string name="dummy_food_name">Chicken Biryani</string>
    <string name="dummy_food_price">$180</string>
    <string name="money_sign">$</string>
    <string name="hint_our_specialized">Our Specialized</string>
    <string name="food_detail_txt_dummy_price">200</string>
    <string name="food_detail_txt_size">Size</string>
    <string name="food_detail_txt_add_on">Add On</string>
    <string name="food_detail_txt_description">Description</string>
    <string name="food_detail_btn_view_cart">VIEW CART</string>
    <string name="sauce_item">Sauce 1</string>
</resources>
