<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activitiy.fooddetail.view.FoodDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">

                </androidx.appcompat.widget.Toolbar>


            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/food_detail_img_food_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_attach_money_black_24dp" />

                        <TextView
                            android:id="@+id/food_detail_txt_price"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="8"
                            android:text="@string/food_detail_txt_dummy_price"
                            android:textSize="@dimen/textView_textSize_16sp" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/food_detail_fab_add_to_cart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|right"
                            android:src="@drawable/ic_shopping_cart_black_24dp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/just_1dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/magnifika"
                            android:text="@string/food_detail_txt_size"
                            android:textSize="@dimen/textView_textSize_24sp" />

                        <RadioGroup
                            android:id="@+id/food_detail_rdi_food_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/just_1dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.github.florent37.expansionpanel.ExpansionHeader
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:expansion_headerIndicator="@id/headerIndicator"
                            app:expansion_layout="@id/expansionLayout"
                            app:expansion_toggleOnClick="true">

                            <!-- HEADER -->

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/magnifika"
                                android:text="@string/food_detail_txt_add_on"
                                android:textSize="@dimen/textView_textSize_24sp" />

                            <!-- HEADER INDICATOR -->

                            <ImageView
                                android:id="@+id/headerIndicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical|end"
                                android:layout_marginEnd="@dimen/padding_16dp"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/ic_expansion_header_indicator_grey_24dp" />

                        </com.github.florent37.expansionpanel.ExpansionHeader>

                        <com.github.florent37.expansionpanel.ExpansionLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/expansionLayout">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/food_detail_recycler_addon"
                                android:layout_width="match_parent"
                                android:layout_height="300dp" />

                        </com.github.florent37.expansionpanel.ExpansionLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/just_1dp"
                        android:layout_marginTop="@dimen/margin_8dp"
                        android:layout_marginBottom="@dimen/margin_8dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/food_detail_txt_title_description"
                            android:textStyle="bold"
                            android:fontFamily="@font/magnifika"
                            android:text="@string/food_detail_txt_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/food_detail_txt_description"
                            android:textStyle="bold"
                            android:text="@string/food_detail_txt_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/food_detail_btn_view_cart"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/magnifika"
            android:text="@string/food_detail_btn_view_cart"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</RelativeLayout>